fix: correct syntax for environment variable assignment in build configuration

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     env:
-      EASYSCAN_URL = ${{ secrets.EASYSCAN_URL }}
+      EASYSCAN_URL: ${{ secrets.EASYSCAN_URL }}
     runs-on: ubuntu-latest
 
     steps:
